<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="com.example.android.practice.MainActivity" >


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/music"
            android:scaleType="centerCrop"
            android:contentDescription="@string/music_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/annie_use_your_telescope"
            android:rotation="-30"
            android:text="@string/sale"
            android:textColor="#536DFE"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:text="@string/select_item"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <ImageView
        android:id="@+id/goods_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/guitar"
        android:scaleType="centerCrop"
        android:contentDescription="@string/guitar_pic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/price_title_text_view"
            android:text="@string/order_price"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/price_text_view"
            android:text="@string/zero_price"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/price_title_text_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/quantity_title_text_view"
            android:text="@string/quantity_title"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/plus_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#536DFE"
            android:text="@string/plus_button"
            android:onClick="increment"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/quantity_title_text_view"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:text="@string/quantity_price"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/quantity_title_text_view"
            android:layout_toStartOf="@id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/minus_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#536DFE"
            android:text="@string/minus_button"
            android:layout_marginEnd="8dp"
            android:onClick="decrement"
            android:layout_toStartOf="@id/quantity_text_view"
            android:layout_below="@id/quantity_title_text_view"/>

    </RelativeLayout>

    <Button
        android:id="@+id/add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:backgroundTint="#536DFE"
        android:text="@string/add_to_cart"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:onClick="addToCart" />

</LinearLayout>